[package]
authors = ["David Michael Weis <dweis7@gmail.com>"]
description = "Bringing the pride into notion"
edition = "2021"
license = "MIT OR APACHE"
name = "notion-bridge"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/notion-bridge"
version = "0.1.0"

[dependencies]
# runtime
tokio = {version = "1", features = ["full"]}

# my fork
notion = {git = "https://github.com/dmweis/notion.git", branch = "dmw/patch-2"}
# notion = {path = "../notion"}

# Error handling
anyhow = {version = "1.0", features = ["backtrace"]}

clap = {version = "4.1", features = ["derive"]}
config = "0.13"
dialoguer = {version = "0.10.3", features = ["history", "fuzzy-select"]}
directories = "5.0"
regex = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
